# match_tutorial_tasks

./: README.md
basic_tasks/: CMakeLists.txt  package.xml
basic_tasks/package_template/: CMakeLists.txt  PACKAGE_ARCHITECTURE.md  README.md  package.xml
launch_file_tasks/: CMakeLists.txt  package.xml
launch_file_tasks/task_01/: README.md  task1.launch
launch_file_tasks/task_02/: README.md  task2.launch
launch_file_tasks/task_03/: README.md  task03.rviz  task3.launch
launch_file_tasks/task_04/: README.md  task4.launch
launch_file_tasks/task_05/: README.md  task5.launch
move_mir_tasks/: CMakeLists.txt  package.xml
move_mir_tasks/src/: solution_01.cpp  solution_02.cpp  solution_03.cpp  solution_04.cpp
move_mir_tasks/task1/: CMakeLists.txt  package.xml  task1.md
move_mir_tasks/task2/: CMakeLists.txt  package.xml  task2.md
move_mir_tasks/task3/: CMakeLists.txt  package.xml  task3.md
move_mir_tasks/task_01/: README.md
move_mir_tasks/task_02/: README.md
move_mir_tasks/task_02/solution_node2/: CMakeLists.txt
move_mir_tasks/task_02/solution_node2/src/: solution_node_02.py
move_mir_tasks/task_03/: README.md
move_mir_tasks/task_04/: README.md
move_mir_tasks/tasks/: TASKS.md
move_mir_tasks_old/: CMakeLists.txt
move_mir_tasks_old/launch/: solution.launch
task_01/: CMakeLists.txt  README.md  package.xml
task_02/: CMakeLists.txt  package.xml
task_03/: CMakeLists.txt  README.md  package.xml
task_04/: CMakeLists.txt  README.md  package.xml
task_05/: CMakeLists.txt  package.xml
task_06/: CMakeLists.txt  package.xml
(+36 files in other folders)
